<resources>
    <!-- Application -->
    <string name="app_name">Go4Lunch</string>
    <string name="main_activity_description">Find a nice restaurant and invite your co-workers for lunch</string>
    <string name="click_on_three_lines_top_left_hand_corner_in_toolbar">Click on three lines in the top left-hand corner of the toolbar</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="Settings">Notifications</string>

    <!-- Bottom Navigation -->
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
    <string name="chat">Chat</string>

    <!-- Main Activity -->
    <string name="error_not_connected">You need to log in!</string>
    <string name="error_authentication_canceled">Authentication canceled…</string>
    <string name="error_no_internet">No internet connection!</string>
    <string name="error_unknown_error">An unknown error occurred…</string>
    <string name="connection_succeed">Authentication successful!</string>
    <string name="button_login_text_logged">Show Profile</string>
    <string name="button_login_text_not_logged">Log In</string>

    <!-- Navigation Drawer -->
    <string name="open">Open navigation</string>
    <string name="close">Close navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_settings">Settings</string>

    <!-- Restaurant Details -->
    <string name="no_phone_number">No phone number</string>
    <string name="no_phone_number_message">The restaurant does not have a phone number</string>
    <string name="tel" translatable="false">tel:</string>
    <string name="no_website">The restaurant does not have a website</string>
    <string name="no_name">Restaurant name unknown</string>
    <string name="no_address">Restaurant address unknown</string>
    <string name="is_joining"> is joining</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="restaurant" translatable="false">Restaurant</string>
    <string name="image">Image</string>
    <string name="star">Star</string>
    <string name="call">Call</string>
    <string name="like">Like</string>
    <string name="website">Website</string>
    <string name="location">Location</string>
    <string name="location_granted">Location permission granted</string>
    <string name="location_denied">Location permission denied</string>

    <!-- Notification Channel -->
    <string name="channel_name">Go4Lunch Notifications</string>
    <string name="channel_description">Notifications for Go4Lunch updates</string>

    <!-- Misc -->
    <string name="logo_drawer" translatable="false">logo_drawer</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="openRest">OPEN</string>
    <string name="closedRest">CLOSED</string>
    <string name="mesuremetre" translatable="false">m</string>
    <string name="title">Activation</string>

    <!-- User Interaction -->
    <string name="angelina" translatable="false">Angelina</string>
    <string name="is_eating">is eating</string>
    <string name="le_zinc" translatable="false">Le Zinc</string>
    <string name="french_12_rue_du_faubourg_poissoni_re" translatable="false">French - 12 rue du Faubourg Poissonière</string>
    <string name="OPEN">OPEN</string>
    <string name="_120_m" translatable="false">120 m</string>
    <string name="_2" translatable="false">(2)</string>
    <string name="go4lunch" translatable="false">Go4Lunch</string>
    <string name="john_malkovitch" translatable="false">John Malkovitch</string>
    <string name="jojo_malko_gmail_com" translatable="false">Jojo.Malko@gmail.com</string>
    <string name="restaurant_photo">restaurant_photo</string>
    <string name="_12_rue_faubourg_poissoni_re" translatable="false">12 rue Faubourg Poissonière</string>
    <string name="Le_Zinc" translatable="false">Le Zinc</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Activation</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Notifications</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sign_in">SIGN IN</string>
    <string name="no_restaurant_selected">No Restaurant selected</string>
    <string name="nav_header">nav_header</string>
    <string name="john_smith">John Smith</string>
    <string name="jsmith1337_gmail_com">Jsmith1337@gmail.com</string>
    <string name="place_name">Place Name</string>

    <string name="title_im_hungry">I\'m Hungry !</string>
    <string name="title_workmates">Workmates</string>
    <string name="title_my_lunch_today">My Lunch Today</string>
    <string name="user_eating_at">%1$s is eating at %2$s</string>
    <string name="user_not_decided">%1$s hasn\'t decided yet.</string>
    <string name="user_joining">%1$s is joining</string>
    <string name="api_key">AIzaSyAh1itRs4lKYIj7idowK02VlemouPPKLJA</string>

</resources>
