<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout_fragment_restaurant_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:fitsSystemWindows="false"
    android:focusable="true">

    <ImageView
        android:id="@+id/photo_restaurant"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/restaurant"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/no_photo_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@id/constraint_layout_restaurant_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_restaurant_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8C8A88"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo_restaurant">

        <GridLayout
            android:id="@+id/grid_restaurant_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/imageStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/star"
                app:backgroundTint="#FFFFFF"
                app:srcCompat="@drawable/ic_baseline_star_24"
                app:tint="#F9D211" />
        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:id="@+id/table_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_restaurant_info">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/button_call"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/call"
                android:textColor="#FF0026"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/button_like"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/like"
                android:textColor="#FF0026"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/button_website"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/website"
                android:textColor="#FF0026"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_workmates_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_layout_buttons" />

</androidx.constraintlayout.widget.ConstraintLayout>