<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="center"
    android:orientation="vertical">

       <ImageView
           android:id="@+id/imageView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:contentDescription="@string/nav_header"
           android:scaleType="centerCrop"
           android:src="@drawable/bar_restaurant"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintVertical_bias="0.0" />

       <TextView
           android:id="@+id/topic_header_drawer"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentStart="true"
           android:shadowColor="#E60808"
           android:shadowRadius="45"
           android:text="@string/go4lunch"
           android:textColor="#F3F0F0"
           android:textSize="60sp"
           android:textStyle="bold"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.489"
           app:layout_constraintStart_toStartOf="@+id/imageView"
           app:layout_constraintTop_toTopOf="@+id/imageView"
           app:layout_constraintVertical_bias="0.166" />

       <de.hdodenhof.circleimageview.CircleImageView
           android:id="@+id/photo_user"
           android:layout_width="55dp"
           android:layout_height="55dp"
           android:layout_alignParentBottom="true"
           android:layout_marginStart="25dp"
           android:src="@drawable/profil_user"
           app:civ_border_color="@color/white"
           app:civ_border_width="2dp"
           app:layout_constraintBottom_toBottomOf="@+id/imageView"
           app:layout_constraintEnd_toStartOf="@+id/Mail"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/topic_header_drawer"
           app:layout_constraintVertical_bias="0.44" />

       <TextView
           android:id="@+id/Name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/topic_header_drawer"
           android:layout_centerVertical="true"
           android:layout_toEndOf="@id/photo_user"
           android:shadowColor="#E60808"
           android:shadowRadius="45"
           android:text="@string/john_smith"
           android:textAppearance="?attr/textAppearanceBody1"
           android:textColor="#FFFFFF"
           android:textSize="12sp"
           android:textStyle="bold"
           app:drawableStartCompat="@drawable/ic_baseline_person_24"
           app:drawableTint="@color/white"
           app:layout_constraintBottom_toTopOf="@+id/Mail"
           app:layout_constraintEnd_toEndOf="@+id/topic_header_drawer"
           app:layout_constraintHorizontal_bias="0.363"
           app:layout_constraintStart_toStartOf="@+id/topic_header_drawer"
           app:layout_constraintTop_toBottomOf="@+id/topic_header_drawer"
           app:layout_constraintVertical_bias="1.0" />

       <TextView
           android:id="@+id/Mail"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/Name"
           android:layout_centerVertical="true"
           android:layout_toEndOf="@id/photo_user"
           android:shadowColor="#E60808"
           android:shadowRadius="45"
           android:text="@string/jsmith1337_gmail_com"
           android:textAppearance="?attr/textAppearanceBody2"
           android:textColor="#FBF8F8"
           android:textSize="12sp"
           android:textStyle="bold"
           app:drawableStartCompat="@drawable/ic_baseline_email_24"
           app:drawableTint="@color/white"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toStartOf="@+id/Name"
           app:layout_constraintTop_toBottomOf="@+id/topic_header_drawer"
           app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>