<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    tools:context=".activities.RestaurantDetail">

        <ImageView
            android:id="@+id/detail_photo"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:contentDescription="restaurant_photo"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/bolo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="230dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/values"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:background="#FF6600"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="70"
                    android:text="Le Zinc"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/detail_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="12 rue Faubourg Poissonière"
                android:textColor="@android:color/white" />


        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="13"
            android:orientation="horizontal">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:drawableTop="@drawable/ic_baseline_local_phone_24"
                android:text="@string/call"
                android:textColor="#E61000" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:drawableTop="@drawable/ic_baseline_star_24"
                android:text="@string/like"
                android:textColor="#E61000" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:drawableTop="@drawable/ic_baseline_language_24"
                android:text="@string/website"
                android:textColor="#E61000" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detail_list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="?android:attr/actionBarSize"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </ScrollView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@android:color/white"
        app:layout_anchor="@id/detail_photo"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_check_circle_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>